--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="32dp"
-        android:background="#F3F3F4">
+        android:background="#B3E5FC">
 
         <ImageView
             android:id="@+id/LogoApplication"
