--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,4 +6,94 @@
     android:layout_height="match_parent"
     tools:context=".register">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="32dp"
+        android:background="#B3E5FC"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/logoApplication2"
+            android:layout_width="wrap_content"
+            android:layout_height="117dp"
+            android:layout_marginBottom="5dp"
+            app:srcCompat="@drawable/logo_aplicacion" />
+
+        <EditText
+            android:id="@+id/nameRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:fontFamily="@font/noto_sans"
+            android:hint="Name"
+            android:inputType="textPersonName"
+            android:textColor="@color/black"
+            android:textColorHighlight="#283593"
+            android:textColorLink="#283593"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <EditText
+            android:id="@+id/EmailAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:fontFamily="@font/noto_sans"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/passwordRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:fontFamily="@font/noto_sans"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/conditionsTerms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans"
+            android:layout_marginBottom="15dp"
+            android:text="I accept terms and conditions"
+            android:textColor="#455A64"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/registerButtonRegister"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounder_button_second"
+            android:fontFamily="@font/noto_sans"
+            android:text="Register"
+            android:layout_marginBottom="25dp"
+            android:textColor="@drawable/txt_properties"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/loginBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:fontFamily="@font/noto_sans"
+            android:text="Already a member? Login"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#455A64"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
